--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Style & Trend</title>
+
   <link rel="stylesheet" href="style.css"/>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
+<!-- NAVBAR -->
 <header class="nav">
   <div class="nav-inner">
     <a class="brand" href="index.html">STYLE<span>&</span>TREND</a>
+
     <nav class="menu">
       <a href="index.html" class="active">Home</a>
       <a href="products.html">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-
       <a href="cart.html">
         Cart <span id="cartCount" class="cart-badge">0</span>
       </a>
@@ -27,86 +30,78 @@
   </div>
 </header>
 
+<!-- HERO (RESİM TAM GÖRÜNÜR) -->
 <section class="hero">
   <div class="hero-inner">
+
+    <!-- SOL METİN -->
     <div>
       <h1>Modern Fashion</h1>
-      <p>Streetwear • Luxury • Casual — clean, wearable and premium-feel pieces.</p>
+      <p>
+        Streetwear, luxury and casual essentials designed for everyday confidence.
+      </p>
+
       <div class="hero-actions">
-        <a class="btn btn-primary" href="products.html">Shop Now</a>
-        <a class="btn btn-light" href="about.html">Our Story</a>
+        <a href="products.html" class="btn btn-primary">Shop Now</a>
+        <a href="about.html" class="btn btn-light">Our Story</a>
       </div>
     </div>
 
+    <!-- SAĞ RESİM -->
     <div class="hero-media">
-      <img src="images/hero.jpg" alt="Hero image">
+      <!-- RESİM TAM GÖRÜNÜR (contain) -->
+      <img src="images/hero.jpg" alt="Style & Trend Hero">
     </div>
+
   </div>
 </section>
 
+<!-- SHOP BY STYLE -->
 <section class="section">
   <div class="container">
     <h2 class="section-title">Shop by Style</h2>
-    <p class="section-sub">Pick your vibe and discover matching pieces.</p>
+    <p class="section-sub">Choose your vibe.</p>
 
     <div class="grid-3">
+
       <div class="card">
-        <div class="cat-img"><img src="images/streetwear.jpg" alt="Streetwear"></div>
+        <div class="cat-img">
+          <img src="images/streetwear.jpg" alt="Streetwear">
+        </div>
         <div class="card-body">
           <h3>Streetwear</h3>
-          <p>Bold layers, relaxed fits and everyday street energy.</p>
-          <a class="btn btn-primary" href="products.html">Explore</a>
+          <p>Relaxed silhouettes and urban attitude.</p>
+          <a href="products.html" class="btn btn-primary">Explore</a>
         </div>
       </div>
 
       <div class="card">
-        <div class="cat-img"><img src="images/luxury.jpg" alt="Luxury"></div>
+        <div class="cat-img">
+          <img src="images/luxury.jpg" alt="Luxury">
+        </div>
         <div class="card-body">
           <h3>Luxury</h3>
-          <p>Premium-feel essentials and refined outerwear.</p>
-          <a class="btn btn-primary" href="products.html">Explore</a>
+          <p>Premium feel with clean detailing.</p>
+          <a href="products.html" class="btn btn-primary">Explore</a>
         </div>
       </div>
 
       <div class="card">
-        <div class="cat-img"><img src="images/casual.jpg" alt="Casual"></div>
+        <div class="cat-img">
+          <img src="images/casual.jpg" alt="Casual">
+        </div>
         <div class="card-body">
           <h3>Casual</h3>
-          <p>Clean basics for daily comfort and simple styling.</p>
-          <a class="btn btn-primary" href="products.html">Explore</a>
+          <p>Simple, comfortable, everyday pieces.</p>
+          <a href="products.html" class="btn btn-primary">Explore</a>
         </div>
       </div>
+
     </div>
   </div>
 </section>
 
-<section class="section">
-  <div class="container">
-    <h2 class="section-title">Editorial Picks</h2>
-    <p class="section-sub">Quick inspiration for outfits.</p>
-
-    <div class="grid-2">
-      <div class="media"><img src="images/edit1.jpg" alt="Edit 1"></div>
-      <div class="media"><img src="images/edit2.jpg" alt="Edit 2"></div>
-      <div class="media"><img src="images/edit3.jpg" alt="Edit 3"></div>
-      <div class="media"><img src="images/edit4.jpg" alt="Edit 4"></div>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container">
-    <div class="banner">
-      <div class="media"><img src="images/campaign.jpg" alt="Campaign"></div>
-      <div class="banner-content">
-        <h2>Night Shift</h2>
-        <p>Sharp fits for late-city energy. Focused capsule drop.</p>
-        <a class="btn btn-primary" href="products.html">Shop Capsule</a>
-      </div>
-    </div>
-  </div>
-</section>
-
+<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <div>© 2026 Style & Trend</div>
@@ -118,47 +113,16 @@
   </div>
 </footer>
 
-<!-- Toast -->
-<div id="toast" class="toast">
-  <div class="dot"></div>
-  <div>
-    <strong id="toastTitle">Added to cart</strong>
-    <small id="toastText">Item added successfully.</small>
-  </div>
-</div>
-
+<!-- CART SCRIPT -->
 <script>
   function getCart() {
     return JSON.parse(localStorage.getItem("cart") || "[]");
-  }
-
-  function setCart(cart) {
-    localStorage.setItem("cart", JSON.stringify(cart));
   }
 
   function updateCartCount() {
     const el = document.getElementById("cartCount");
     if (!el) return;
     el.textContent = getCart().length;
-  }
-
-  function showToast(title, text) {
-    const toast = document.getElementById("toast");
-    if (!toast) return;
-    document.getElementById("toastTitle").textContent = title;
-    document.getElementById("toastText").textContent = text;
-    toast.classList.add("show");
-    clearTimeout(window.__toastTimer);
-    window.__toastTimer = setTimeout(() => toast.classList.remove("show"), 2200);
-  }
-
-  // Global addToCart (other pages can use too)
-  function addToCart(name, price) {
-    const cart = getCart();
-    cart.push({ name, price });
-    setCart(cart);
-    updateCartCount();
-    showToast("Added to cart", name + " has been added.");
   }
 
   window.addEventListener("load", updateCartCount);
