--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Style & Trend</title>
 
-  <!-- FAVICON -->
+  <!-- FAVICON (SADECE EKLENDİ) -->
   <link rel="icon" type="image/png" href="favicon.png">
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- NAVBAR -->
 <header class="nav">
   <div class="nav-inner">
     <a href="index.html" class="brand">Style<span>&</span>Trend</a>
@@ -21,7 +20,9 @@
       <a href="products.html">Products</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-      <a href="cart.html">Cart <span class="cart-badge" id="cart-count">0</span></a>
+      <a href="cart.html">
+        Cart <span class="cart-badge" id="cart-count">0</span>
+      </a>
     </nav>
   </div>
 </header>
@@ -148,7 +149,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <p>© 2026 Style & Trend</p>
